--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         Your trusted partner in property management, construction, and landscaping services in Saint John.</p>
                      </header>
                      <div class="button-container">
-                        <a href="/contactus.html" class="button">Get a Free Quote</a>
+                        <a href="/contactus.html" class="button">Get a Free Quote</a> 
                         <a href="/contactus.html" class="button">Manage My Property</a>
                         <a href="/contactus.html" class="button">Contact Us</a>
                      </div>
@@ -120,7 +120,7 @@
                   <ul>
                      <li><a href="index.html">Homepage</a></li>
                      <li><a href="services.html">Services</a></li>
-                     <li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new">Rental Application</a></li>
+                     <li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new" target="_blank">Rental Application</a></li>
                      <li><a href="contactus.html">Contact Us</a></li>
                      <li style="margin-top: 20px;">
                         <a href="Buildium Client"><button class="sidebar-button">Client Login</button></a>
