--- a/contactus.html
+++ b/contactus.html
@@ -84,7 +84,7 @@
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
 									<li><a href="services.html">Services</a></li>
-									<li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new">Rental Application</a></li>
+									<li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new" target="_blank">Rental Application</a></li>
 									<li><a href="contactus.html">Contact Us</a></li>
 									<li style="margin-top: 20px;">
 										<button style="padding: 20px; background-color: rgba(75, 73, 73, 0.63); color: white; font-weight: bold; width: 60%; display: flex; align-items: center; justify-content: center;"><a href="Buildium Client" style="color: white; text-decoration: none;">Client Login</a></button>
