--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
             <div class="inner">
                <ul class="icons social-icons">
                   <li><a href="https://www.facebook.com/coastalpmca/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                  <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                  <li><a href="#" class="icon brands fa-instagram" target="_blank > <span class="label">Instagram</span></a></li>
                </ul>
                <!-- Header -->
                <header id="header">
