--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
            <link rel="icon" type="image/png" sizes="512x512" href="/images/android-chrome-512x512.png">
            <!-- Manifest File -->
            <link rel="manifest" href="/images/site.webmanifest">
+           <meta property="og:title" content="Welcome to Coastal Property Management" />
+           <meta property="og:description" content="Explore our wide selection of rental and vacation properties." />
+           <meta property="og:url" content="https://www.coastalpm.ca" />
+           <meta property="og:image" content="https://www.coastalpmt.ca/images/coastal.png" />
+           <meta property="og:type" content="website" />
    </head>
    <body class="is-preload">
       <!-- Wrapper -->
