--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <meta property="og:title" content="Welcome to Coastal Property Management" />
            <meta property="og:description" content="Explore our wide selection of rental and vacation properties." />
            <meta property="og:url" content="https://www.coastalpm.ca" />
-           <meta property="og:image" content="https://www.coastalpmt.ca/images/Coastal.png" />
+           <meta property="og:image" content="https://www.coastalpm.ca/images/Coastal.png" />
            <meta property="og:type" content="website" />
    </head>
    <body class="is-preload">
