--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
            <meta property="og:description" content="Explore our wide selection of rental and vacation properties." />
            <meta property="og:url" content="https://www.coastalpm.ca" />
            <meta property="og:image" content="https://www.coastalpm.ca/images/Coastal.png" />
+           <meta property="og:image:width" content="1200" />
+           <meta property="og:image:height" content="630" />
            <meta property="og:type" content="website" />
    </head>
    <body class="is-preload">
@@ -131,7 +133,7 @@
                         <a href="Buildium Client"><button class="sidebar-button">Client Login</button></a>
                      </li>
                      <li style="border-top:unset">
-                        <a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"><button class="sidebar-button">Tenant Login</button></a>
+                        <a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal" target="_blank"><button class="sidebar-button">Tenant Login</button></a>
                      </li>
                   </ul>
                </nav>
