--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
            <link rel="icon" type="image/png" sizes="512x512" href="/images/android-chrome-512x512.png">
            <!-- Manifest File -->
            <link rel="manifest" href="/images/site.webmanifest">
+           <meta property="og:locale" content="en_US" />
            <meta property="og:title" content="Welcome to Coastal Property Management" />
            <meta property="og:description" content="Explore our wide selection of rental and vacation properties." />
-           <meta property="og:url" content="https://www.coastalpm.ca" />
-           <meta property="og:image" content="https://www.coastalpm.ca/images/Coastal.png" />
+           <meta property="og:url" content="https://coastalpm.ca" />
+           <meta property="og:image" content="https://coastalpm.ca/images/Coastal.png" />
            <meta property="og:image:width" content="1200" />
            <meta property="og:image:height" content="630" />
+           <meta property="article:publisher" content="https://www.facebook.com/coastalpmca" />
            <meta property="og:type" content="website" />
    </head>
    <body class="is-preload">
