Changed phone number/email

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                   </header>
                   <p>Hey there! Whether it's managing properties, tackling construction projects, or beautifying landscapes, we've got you covered. Let's bring your vision to life – reach out and let's make it happen!</p>
                   <ul class="contact">
-                     <li class="icon solid fa-envelope"><a href="#">info@coastalpm.ca</a></li>
-                     <li class="icon solid fa-phone">506-709-0420</li>
+                     <li class="icon solid fa-envelope"><a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a></li>
+                     <li class="icon solid fa-phone"><a href="tel:5067090420">506-709-0420</a></li>
                      <li class="icon solid fa-home">Grand Bay-Westfield</li>
                      <li class="icon solid fa-wrench">Also serving Saint John, Rothesay, Quispamsis</li>
                   </ul>
