--- a/services.html
+++ b/services.html
@@ -4,8 +4,9 @@
       <title>Coastal Property Management</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="assets/css/main.css" />
-	  <link rel="stylesheet" href="assets/css/styles.css" />
+	  <!--<link rel="stylesheet" href="assets/css/styles.css" />-->
 	  <!-- Standard favicon -->
       <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 	  <!-- Apple Touch Icon -->
@@ -24,14 +25,14 @@
          <!-- Main -->
          <div id="main">
             <div class="inner">
-               <ul class="icons social-icons">
-                  <li><a href="https://www.facebook.com/coastalpmca/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                  <li><a href="#" class="icon brands fa-instagram" target="_blank > <span class="label">Instagram</span></a></li>
-               </ul>
+				<ul class="icons social-icons">
+					<li><a href="https://www.facebook.com/coastalpmca/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				 </ul>
                <!-- Header -->
                <header id="header">
                   <a href="index.html" class="logo">
-                  <img src="images/logo.png" alt="Coastal Property Management Logo" width="200" height="200">
+                  <img src="images/logo_dark.png" alt="Coastal Property Management Logo" width="200" height="200">
                   </a>
                </header>
 							<!-- Section -->
@@ -93,56 +94,47 @@
 					</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-
-
-							<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new">Rental Application</a></li>
-									<li><a href="contactus.html">Contact Us</a></li>
-									<li style="margin-top: 20px;">
-										<button style="padding: 20px; background-color: rgba(75, 73, 73, 0.63); color: white; font-weight: bold; width: 60%; display: flex; align-items: center; justify-content: center;"><a href="Buildium Client" style="color: white; text-decoration: none;">Client Login</a></button>
-									</li>
-									<li style="margin-top: 20px; border-top: 3px solid white;">
-										<button style="padding: 10px; background-color: rgba(75, 73, 73, 0.63); color: white; font-weight: bold; width: 60%; display: flex; align-items: center; justify-content: center;"><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal" style="color: white; text-decoration: none;">Tenant Login</a></button>
-									</li>
-								</ul>
-							</nav>
-
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Hey there! Whether it's managing properties, tackling construction projects, or beautifying landscapes, we've got you covered. Let's bring your vision to life – reach out and let's make it happen!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">info@coastalpm.ca</a></li>
-										<li class="icon solid fa-phone">506-709-0420</li>
-										<li class="icon solid fa-home">Grand Bay-Westfield</li>
-										<li class="icon solid fa-wrench">Also serving Saint John, Rothesay, Quispamsis</li>
-
-									</ul>
-								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p>&copy; <span id="currentYear"></span> Coastal Property Management. All rights reserved.</p>
-								</footer>
-								<script>
-									document.getElementById("currentYear").innerHTML = new Date().getFullYear();
-								  </script>
-
-						</div>
+				<div id="sidebar">
+					<div class="inner">
+					   <!-- Menu -->
+					   <nav id="menu">
+						  <header class="major">
+							 <h2>Menu</h2>
+						  </header>
+						  <ul>
+							 <li><a href="index.html">Homepage</a></li>
+							 <li><a href="services.html">Services</a></li>
+							 <li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new" target="_blank">Rental Application</a></li>
+							 <li><a href="contactus.html">Contact Us</a></li>
+						  </ul>
+						  <div class="sidebar-buttons">
+							 <a href="Buildium Client"><button class="sidebar-button">Client Login</button></a>
+							 <a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal" target="_blank"><button class="sidebar-button">Tenant Login</button></a>
+						  </div>
+					   </nav>
+					   <!-- Section -->
+					   <section>
+						  <header class="major">
+							 <h2>Get in touch</h2>
+						  </header>
+						  <p>Hey there! Whether it's managing properties, tackling construction projects, or beautifying landscapes, we've got you covered. Let's bring your vision to life – reach out and let's make it happen!</p>
+						  <ul class="contact">
+							 <li class="icon solid fa-envelope"><a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a></li>
+							 <li class="icon solid fa-phone"><a href="tel:5067090420">506-709-0420</a></li>
+							 <li class="icon solid fa-home">Grand Bay-Westfield</li>
+							 <li class="icon solid fa-wrench">Also serving Saint John, Rothesay, Quispamsis</li>
+						  </ul>
+					   </section>
+					   <!-- Footer -->
+					   <footer id="footer">
+						  <p class="copyright">&copy; <span id="currentYear"></span> Coastal Property Management. All rights reserved.</p>
+					   </footer>
+					   <script>
+						  document.getElementById("currentYear").innerHTML = new Date().getFullYear();
+						   
+					   </script>
 					</div>
+				 </div>
 
 			</div>
 
