oops, logo (noird)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <header id="header">
             <a href="index.html" class="logo">
               <img
-                src="images/logo.png"
+                src="images/logo_dark.png"
                 alt="Coastal Property Management Logo"
                 width="200"
                 height="200"
