--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Coastal Property Management</title>
+    <title>About Coastal Property Management</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -12,10 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!--<link rel="stylesheet" href="assets/css/styles.css" />-->
-    <!-- Standard favicon -->
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-    <!-- Apple Touch Icon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -33,7 +30,6 @@
       sizes="16x16"
       href="/images/favicon-16x16.png"
     />
-    <!-- Android Chrome Icons -->
     <link
       rel="icon"
       type="image/png"
@@ -46,8 +42,22 @@
       sizes="512x512"
       href="/images/android-chrome-512x512.png"
     />
-    <!-- Manifest File -->
     <link rel="manifest" href="/images/site.webmanifest" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="About Coastal Property Management" />
+    <meta property="og:description" content="Learn about who we are." />
+    <meta property="og:url" content="https://coastalpm.ca/about.html" />
+    <meta
+      property="og:image"
+      content="https://coastalpm.ca/images/about_cover.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="article:publisher"
+      content="https://www.facebook.com/coastalpmca"
+    />
+    <meta property="og:type" content="website" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -81,55 +91,71 @@
               />
             </a>
           </header>
-
           <!-- Banner -->
-          <div class="content">
-            <h2>We're Here to Help!</h2>
+          <section id="banner">
+            <div class="content">
+              <h1>ABOUT US</h1>
+              <p style="text-align: justify">
+                Welcome to Coastal Property Management, your trusted partner in
+                property management, construction, and landscaping services. We
+                proudly serve the vibrant community of Saint John, New
+                Brunswick. Whether you're looking to manage your property
+                efficiently, undertake a new construction project, or maintain a
+                beautiful landscape, we are here to help you every step of the
+                way with our dedicated and professional services.
+              </p>
+            </div>
+          </section>
+          <!-- Content Section -->
+          <section>
+            <header class="major">
+              <h2>Our Story</h2>
+            </header>
             <p>
-              Please fill out the form below with your contact information and a
-              brief message detailing your inquiry. Our team will review your
-              submission and get back to you as promptly as possible.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              pulvinar ex vel mi tincidunt congue. Phasellus id gravida orci,
+              eget ullamcorper odio. Praesent volutpat justo felis, nec
+              vestibulum purus pharetra vel. Donec vitae lacinia nulla. Cras nec
+              sem et nisi fermentum feugiat. Vestibulum id ligula quis libero
+              fermentum aliquet. Nullam nec libero non mi blandit vestibulum.
+              Integer rutrum metus sed justo feugiat, in eleifend dui ultrices.
+              Sed sed malesuada sem. Cras vehicula ipsum vel nunc convallis, eu
+              sollicitudin elit pellentesque. Mauris ac arcu lobortis, tincidunt
+              libero nec, vulputate velit. Maecenas dapibus, nisi a luctus
+              sodales, dui ligula semper metus, nec pretium libero est eget
+              mauris. Mauris laoreet sollicitudin libero ut placerat. Integer
+              viverra auctor tortor, vel gravida lectus. Vestibulum at aliquet
+              nulla. Nulla facilisi. Curabitur pharetra ultricies mi vitae
+              laoreet. Nam eget sapien metus. Phasellus bibendum, odio eu
+              consequat pulvinar, enim sapien ullamcorper metus, nec posuere
+              tortor nisi vitae ligula.
             </p>
-          </div>
-          <div class="contact-form">
-            <form
-              action="https://forms.office.com/Pages/ResponsePage.aspx?id=jDc2nRajekGiv63Gb6gIokA-KwhxZ2BItZikivGlYWNUQkNDNlNGMkg0Wjk5RDdRMUo2RlgyWFFCWC4u"
-              method="POST"
-            >
-              <div class="form-wrapper">
-                <div class="form-group">
-                  <label for="name">Name:</label>
-                  <input type="text" id="name" name="name" required />
-                </div>
-                <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" required />
-                </div>
-                <div class="form-group">
-                  <label for="phone">Phone (optional):</label>
-                  <input type="tel" id="phone" name="phone" />
-                </div>
-                <div class="form-group full-width">
-                  <label for="message">Message:</label>
-                  <textarea
-                    id="message"
-                    name="message"
-                    rows="4"
-                    required
-                  ></textarea>
-                </div>
-                <div class="form-group full-width">
-                  <input type="submit" value="Send Message" />
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="content">
-            <p>
-              Thank you for choosing Coastal Property Management. We look
-              forward to serving you!
-            </p>
-          </div>
+          </section>
+          <!-- Testimonials Section -->
+          <section>
+            <header class="major">
+              <h2>What Our Clients Have To Say</h2>
+            </header>
+            <div class="posts">
+              <article>
+                <h3><i class="fas fa-user"></i> John Doe, Property Owner</h3>
+                <p>
+                  "Coastal Property Management has been a lifesaver for me!
+                  Their professionalism and dedication to their clients are
+                  unmatched. I highly recommend their services."
+                </p>
+              </article>
+              <article>
+                <h3><i class="fas fa-user"></i> Jane Smith, Landlord</h3>
+                <p>
+                  "I've been using Coastal Property Management for years, and
+                  they've consistently exceeded my expectations. From property
+                  maintenance to tenant management, they handle it all with
+                  expertise."
+                </p>
+              </article>
+            </div>
+          </section>
         </div>
       </div>
       <!-- Sidebar -->
@@ -187,26 +213,23 @@
               </li>
             </ul>
           </section>
-          <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
               &copy; <span id="currentYear"></span> Coastal Property Management.
               All rights reserved.
             </p>
           </footer>
-          <script>
-            document.getElementById("currentYear").innerHTML =
-              new Date().getFullYear();
-          </script>
         </div>
       </div>
     </div>
-
-    <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+      document.getElementById("currentYear").innerHTML =
+        new Date().getFullYear();
+    </script>
   </body>
 </html>
