--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </header>
             <ul>
               <li><a href="index.html">Homepage</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li>
                 <a
@@ -167,7 +168,8 @@
             </header>
             <p>
               Hey there! Whether it's managing properties, tackling construction
-              projects, or beautifying landscapes...
+              projects, or beautifying landscapes, we've got you covered. Let's
+              bring your vision to life – reach out and let's make it happen!
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
