--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <meta property="og:url" content="https://coastalpm.ca/about.html" />
     <meta
       property="og:image"
-      content="https://coastalpm.ca/images/about_cover.jpg"
+      content="https://coastalpm.ca/images/Coastal.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -106,38 +106,78 @@
               </p>
             </div>
           </section>
+          <!-- Image Placeholder -->
+          <section class="image-placeholder-container">
+            <div class="image image-placeholder">
+              <img
+                src="images/placeholders/cityscape-sj.webp"
+                alt="Cityscape of Saint John"
+              />
+              <span class="image-caption">City of Saint John</span>
+            </div>
+          </section>
           <!-- Content Section -->
           <section>
             <header class="major">
-              <h2>Our Story</h2>
+              <h2><i class="fa fa-book" aria-hidden="true"></i> Our Story</h2>
             </header>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              pulvinar ex vel mi tincidunt congue. Phasellus id gravida orci,
-              eget ullamcorper odio. Praesent volutpat justo felis, nec
-              vestibulum purus pharetra vel. Donec vitae lacinia nulla. Cras nec
-              sem et nisi fermentum feugiat. Vestibulum id ligula quis libero
-              fermentum aliquet. Nullam nec libero non mi blandit vestibulum.
-              Integer rutrum metus sed justo feugiat, in eleifend dui ultrices.
-              Sed sed malesuada sem. Cras vehicula ipsum vel nunc convallis, eu
-              sollicitudin elit pellentesque. Mauris ac arcu lobortis, tincidunt
-              libero nec, vulputate velit. Maecenas dapibus, nisi a luctus
-              sodales, dui ligula semper metus, nec pretium libero est eget
-              mauris. Mauris laoreet sollicitudin libero ut placerat. Integer
-              viverra auctor tortor, vel gravida lectus. Vestibulum at aliquet
-              nulla. Nulla facilisi. Curabitur pharetra ultricies mi vitae
-              laoreet. Nam eget sapien metus. Phasellus bibendum, odio eu
-              consequat pulvinar, enim sapien ullamcorper metus, nec posuere
-              tortor nisi vitae ligula.
+              Our property management firm was established by two visionary
+              entrepreneurs who were driven by a common goal to deliver
+              unparalleled service excellence to our clientele. Our seasoned
+              team comprises professionals with extensive experience in the
+              construction and development sector, enabling us to offer
+              comprehensive turnkey solutions for managing properties
+              efficiently.
+            </p>
+            <p>
+              Our staff's background covers diverse aspects of property
+              management such as handling tenants, routine maintenance,
+              emergency repairs, leasing, and rent collection - ensuring that
+              every facet is expertly managed with the utmost care. This level
+              of experience positions us uniquely to cater not only to
+              residential properties but also commercial real estate ventures,
+              including multi-unit buildings or single-family homes requiring
+              comprehensive management services.
+            </p>
+            <p>
+              At our core, we are landscaping enthusiasts who recognize that
+              maintaining attractive exterior spaces is integral to the
+              property's appeal and value. Our team boasts expertise in
+              developing and executing innovative outdoor designs for properties
+              under our care while ensaturating a meticulous maintenance regime
+              - from irrigation systems, lawn care services, to plant selection
+              and hardscaping projects.
+            </p>
+            <p>
+              Our unwavering commitment to excellence has enabled us to build
+              enduring relationships with clients who trust us with their most
+              valuable assets – their properties. As we continue to evolve and
+              embrace new technologies that enhance our service delivery
+              capabilities, we remain devoted to exceeding expectations and
+              delivering results that speak volumes about the value of
+              entrusting property management services to a team well-versed in
+              every nuance of the industry.
             </p>
           </section>
           <!-- Testimonials Section -->
           <section>
             <header class="major">
-              <h2>What Our Clients Have To Say</h2>
+              <h2>
+                <i class="fa fa-comments" aria-hidden="true"></i> What Our
+                Clients Have To Say
+              </h2>
             </header>
             <div class="posts">
               <article>
+                <div class="image-placeholder-container">
+                  <div class="image image-placeholder">
+                    <img
+                      src="images/placeholders/thumbs-up-2056022_640.jpg"
+                      alt="Thumbs Up"
+                    />
+                  </div>
+                </div>
                 <h3><i class="fas fa-user"></i> John Doe, Property Owner</h3>
                 <p>
                   "Coastal Property Management has been a lifesaver for me!
@@ -153,6 +193,14 @@
                   maintenance to tenant management, they handle it all with
                   expertise."
                 </p>
+                <div class="image-placeholder-container">
+                  <div class="image image-placeholder">
+                    <img
+                      src="images/placeholders/woman-2385785_640.jpg"
+                      alt="Woman Thumbs Up"
+                    />
+                  </div>
+                </div>
               </article>
             </div>
           </section>
@@ -167,33 +215,60 @@
               <h2>Menu</h2>
             </header>
             <ul>
-              <li><a href="index.html">Homepage</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li>
+                <a href="index.html"
+                  >Homepage <i class="fa fa-home" aria-hidden="true"></i></a
+                >
+              </li>
+              <li>
+                <a href="about.html"
+                  ></i>About
+                  Us <i class="fa fa-info-circle" aria-hidden="true"></i></a
+                >
+              </li>
+              <li>
+                <a href="services.html"
+                  >Services <i class="fa fa-cogs" aria-hidden="true"></i></a
+                >
+              </li>
               <li>
                 <a
                   href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
-                  >Rental Application</a
+                >
+                  Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="contactus.html"
+                  >Contact
+                  Us <i class="fa fa-envelope" aria-hidden="true"></i></a
                 >
               </li>
-              <li><a href="contactus.html">Contact Us</a></li>
             </ul>
             <div class="sidebar-buttons">
-              <a href="Buildium Client"
-                ><button class="sidebar-button">Client Login</button></a
-              >
+              <a href="Buildium Client">
+                <button class="sidebar-button">
+                  <i class="fa fa-user" aria-hidden="true"></i> Client Login
+                </button>
+              </a>
               <a
                 href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
-                ><button class="sidebar-button">Tenant Login</button></a
               >
+                <button class="sidebar-button">
+                  <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
+                  Login
+                </button>
+              </a>
             </div>
           </nav>
           <!-- Section -->
           <section>
             <header class="major">
-              <h2>Get in touch</h2>
+              <h2>
+                <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
+              </h2>
             </header>
             <p>
               Hey there! Whether it's managing properties, tackling construction
@@ -231,5 +306,10 @@
       document.getElementById("currentYear").innerHTML =
         new Date().getFullYear();
     </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        document.body.classList.add('fade-in');
+      });
+    </script>    
   </body>
 </html>
