--- a/index.html
+++ b/index.html
@@ -129,70 +129,97 @@
           </section>
         </div>
       </div>
-      <!-- Sidebar -->
-      <div id="sidebar">
-        <div class="inner">
-          <!-- Menu -->
-          <nav id="menu">
-            <header class="major">
-              <h2>Menu</h2>
-            </header>
-            <ul>
-              <li><a href="index.html">Homepage</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li>
-                <a
-                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
-                  target="_blank"
-                  >Rental Application</a
-                >
-              </li>
-              <li><a href="contactus.html">Contact Us</a></li>
-            </ul>
-            <div class="sidebar-buttons">
-              <a href="Buildium Client"
-                ><button class="sidebar-button">Client Login</button></a
+     <!-- Sidebar -->
+     <div id="sidebar">
+      <div class="inner">
+        <!-- Menu -->
+        <nav id="menu">
+          <header class="major">
+            <h2>Menu</h2>
+          </header>
+          <ul>
+            <li>
+              <a href="index.html"
+                >Homepage <i class="fa fa-home" aria-hidden="true"></i></a
               >
+            </li>
+            <li>
+              <a href="about.html"
+                ></i>About
+                Us <i class="fa fa-info-circle" aria-hidden="true"></i></a
+              >
+            </li>
+            <li>
+              <a href="services.html"
+                >Services <i class="fa fa-cogs" aria-hidden="true"></i></a
+              >
+            </li>
+            <li>
               <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                 target="_blank"
-                ><button class="sidebar-button">Tenant Login</button></a
               >
-            </div>
-          </nav>
-          <!-- Section -->
-          <section>
-            <header class="major">
-              <h2>Get in touch</h2>
-            </header>
-            <p>
-              Hey there! Whether it's managing properties, tackling construction
-              projects, or beautifying landscapes, we've got you covered. Let's
-              bring your vision to life – reach out and let's make it happen!
-            </p>
-            <ul class="contact">
-              <li class="icon solid fa-envelope">
-                <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
-              </li>
-              <li class="icon solid fa-phone">
-                <a href="tel:5067090420">506-709-0420</a>
-              </li>
-              <li class="icon solid fa-home">Grand Bay-Westfield</li>
-              <li class="icon solid fa-wrench">
-                Also serving Saint John, Rothesay, Quispamsis
-              </li>
-            </ul>
-          </section>
-          <footer id="footer">
-            <p class="copyright">
-              &copy; <span id="currentYear"></span> Coastal Property Management.
-              All rights reserved.
-            </p>
-          </footer>
-        </div>
+                Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a href="contactus.html"
+                >Contact
+                Us <i class="fa fa-envelope" aria-hidden="true"></i></a
+              >
+            </li>
+          </ul>
+          <div class="sidebar-buttons">
+            <a href="Buildium Client">
+              <button class="sidebar-button">
+                <i class="fa fa-user" aria-hidden="true"></i> Client Login
+              </button>
+            </a>
+            <a
+              href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+              target="_blank"
+            >
+              <button class="sidebar-button">
+                <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
+                Login
+              </button>
+            </a>
+          </div>
+        </nav>
+        <!-- Section -->
+        <section>
+          <header class="major">
+            <h2>
+              <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
+            </h2>
+          </header>
+          <p>
+            Hey there! Whether it's managing properties, tackling construction
+            projects, or beautifying landscapes, we've got you covered. Let's
+            bring your vision to life – reach out and let's make it happen!
+          </p>
+          <ul class="contact">
+            <li class="icon solid fa-envelope">
+              <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
+            </li>
+            <li class="icon solid fa-phone">
+              <a href="tel:5067090420">506-709-0420</a>
+            </li>
+            <li class="icon solid fa-home">Grand Bay-Westfield</li>
+            <li class="icon solid fa-wrench">
+              Also serving Saint John, Rothesay, Quispamsis
+            </li>
+          </ul>
+        </section>
+        <footer id="footer">
+          <p class="copyright">
+            &copy; <span id="currentYear"></span> Coastal Property Management.
+            All rights reserved.
+          </p>
+        </footer>
       </div>
     </div>
+  </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
@@ -205,5 +232,10 @@
       document.getElementById("currentYear").innerHTML =
         new Date().getFullYear();
     </script>
+        <script>
+          document.addEventListener("DOMContentLoaded", function() {
+            document.body.classList.add('fade-in');
+          });
+        </script>
   </body>
 </html>
