webp, complement color

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Coastal Property Management</title>
     <meta charset="utf-8" />
+    <title>
+      Coastal Property Management - Property Management, Construction, and
+      Landscaping in Saint John, New Brunswick
+    </title>
+    <meta
+      name="description"
+      content="Coastal Property Management specializes in property management, construction, and landscaping services in Saint John, New Brunswick. Explore our services and find out how we can help manage your property efficiently."
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap"
       rel="stylesheet"
@@ -46,11 +55,11 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:title"
-      content="Welcome to Coastal Property Management"
+      content="Expert Property Management Services in Saint John, NB"
     />
     <meta
       property="og:description"
-      content="Explore our wide selection of rental and vacation properties."
+      content="Discover how Coastal Property Management can assist you with property management, construction, and landscaping services. Dedicated to serving Saint John and surrounding areas."
     />
     <meta property="og:url" content="https://coastalpm.ca" />
     <meta
@@ -66,9 +75,7 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="is-preload">
-    <!-- Wrapper -->
     <div id="wrapper">
-      <!-- Main -->
       <div id="main">
         <div class="inner">
           <ul class="icons social-icons">
@@ -77,39 +84,41 @@
                 href="https://www.facebook.com/coastalpmca/"
                 target="_blank"
                 class="icon brands fa-facebook-f"
+                aria-label="Follow us on Facebook"
                 ><span class="label">Facebook</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon brands fa-instagram"
+              <a
+                href="#"
+                class="icon brands fa-instagram"
+                aria-label="Follow us on Instagram"
                 ><span class="label">Instagram</span></a
               >
             </li>
           </ul>
-          <!-- Header -->
           <header id="header">
-            <a href="index.html" class="logo">
-              <img
-                src="images/logo_dark.png"
+            <a href="index.html" class="logo"
+              ><img
+                src="images/logo_dark.webp"
                 alt="Coastal Property Management Logo"
-                width="200"
-                height="200"
-              />
-            </a>
+                width="300"
+            /></a>
           </header>
-          <!-- Banner -->
           <section id="banner">
             <div class="content">
-              <h1>WELCOME TO</h1>
+              <h1>Welcome to</h1>
               <h2>Coastal Property Management</h2>
-              <p style="text-align: justify">
-                Welcome to Coastal Property Management, your trusted partner in
-                property management, construction, and landscaping services. We
-                proudly serve the vibrant community of Saint John, New
-                Brunswick. Whether you're looking to manage your property
-                efficiently, undertake a new construction project, or maintain a
-                beautiful landscape, we are here to help you every step of the
-                way with our dedicated and professional services.
+              <p>
+                Welcome to <em>Coastal Property Management</em>, your trusted
+                partner in property management, construction, and landscaping
+                services. We proudly serve the vibrant community of
+                <strong>Saint John, New Brunswick</strong>. Whether you're
+                looking to <strong>manage</strong> your property efficiently,
+                undertake a new <strong>construction</strong> project, or
+                maintain a beautiful <strong>landscape</strong>, we are here to
+                help you every step of the way with our dedicated and
+                professional services.
               </p>
               <div class="button-container">
                 <a href="/contactus.html" class="button">Get a Free Quote</a>
@@ -118,7 +127,6 @@
               </div>
             </div>
           </section>
-          <!-- Properties -->
           <section>
             <header class="major">
               <h2>Current Properties For Rent</h2>
@@ -129,97 +137,91 @@
           </section>
         </div>
       </div>
-     <!-- Sidebar -->
-     <div id="sidebar">
-      <div class="inner">
-        <!-- Menu -->
-        <nav id="menu">
-          <header class="major">
-            <h2>Menu</h2>
-          </header>
-          <ul>
-            <li>
-              <a href="index.html"
-                >Homepage <i class="fa fa-home" aria-hidden="true"></i></a
+      <div id="sidebar">
+        <div class="inner">
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <a href="index.html"
+                  >Homepage <i class="fa fa-home" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="about.html"
+                  >About Us <i class="fa fa-info-circle" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="services.html"
+                  >Services <i class="fa fa-cogs" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                  target="_blank"
+                  >Rental Application
+                  <i class="fa fa-file-alt" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="contactus.html"
+                  >Contact Us <i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
+              </li>
+            </ul>
+            <div class="sidebar-buttons">
+              <a href="Buildium Client"
+                ><button class="sidebar-button">
+                  <i class="fa fa-user" aria-hidden="true"></i> Client Login
+                </button></a
               >
-            </li>
-            <li>
-              <a href="about.html"
-                ></i>About
-                Us <i class="fa fa-info-circle" aria-hidden="true"></i></a
-              >
-            </li>
-            <li>
-              <a href="services.html"
-                >Services <i class="fa fa-cogs" aria-hidden="true"></i></a
-              >
-            </li>
-            <li>
               <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
+                ><button class="sidebar-button">
+                  <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
+                  Login
+                </button></a
               >
-                Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-              <a href="contactus.html"
-                >Contact
-                Us <i class="fa fa-envelope" aria-hidden="true"></i></a
-              >
-            </li>
-          </ul>
-          <div class="sidebar-buttons">
-            <a href="Buildium Client">
-              <button class="sidebar-button">
-                <i class="fa fa-user" aria-hidden="true"></i> Client Login
-              </button>
-            </a>
-            <a
-              href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
-              target="_blank"
-            >
-              <button class="sidebar-button">
-                <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
-                Login
-              </button>
-            </a>
-          </div>
-        </nav>
-        <!-- Section -->
-        <section>
-          <header class="major">
-            <h2>
-              <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
-            </h2>
-          </header>
-          <p>
-            Hey there! Whether it's managing properties, tackling construction
-            projects, or beautifying landscapes, we've got you covered. Let's
-            bring your vision to life – reach out and let's make it happen!
-          </p>
-          <ul class="contact">
-            <li class="icon solid fa-envelope">
-              <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
-            </li>
-            <li class="icon solid fa-phone">
-              <a href="tel:5067090420">506-709-0420</a>
-            </li>
-            <li class="icon solid fa-home">Grand Bay-Westfield</li>
-            <li class="icon solid fa-wrench">
-              Also serving Saint John, Rothesay, Quispamsis
-            </li>
-          </ul>
-        </section>
-        <footer id="footer">
-          <p class="copyright">
-            &copy; <span id="currentYear"></span> Coastal Property Management.
-            All rights reserved.
-          </p>
-        </footer>
+            </div>
+          </nav>
+          <section>
+            <header class="major">
+              <h2>
+                <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
+              </h2>
+            </header>
+            <p>
+              Hey there! Whether it's managing properties, tackling construction
+              projects, or beautifying landscapes, we've got you covered. Let's
+              bring your vision to life – reach out and let's make it happen!
+            </p>
+            <ul class="contact">
+              <li class="icon solid fa-envelope">
+                <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
+              </li>
+              <li class="icon solid fa-phone">
+                <a href="tel:5067090420">506-709-0420</a>
+              </li>
+              <li class="icon solid fa-home">Grand Bay-Westfield</li>
+              <li class="icon solid fa-wrench">
+                Also serving Saint John, Rothesay, Quispamsis
+              </li>
+            </ul>
+          </section>
+          <footer id="footer">
+            <p class="copyright">
+              &copy; <span id="currentYear"></span> Coastal Property Management.
+              All rights reserved.
+            </p>
+          </footer>
+        </div>
       </div>
     </div>
-  </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
@@ -232,10 +234,10 @@
       document.getElementById("currentYear").innerHTML =
         new Date().getFullYear();
     </script>
-        <script>
-          document.addEventListener("DOMContentLoaded", function() {
-            document.body.classList.add('fade-in');
-          });
-        </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.body.classList.add("fade-in");
+      });
+    </script>
   </body>
 </html>
