--- a/services.html
+++ b/services.html
@@ -74,10 +74,9 @@
           <header id="header">
             <a href="index.html" class="logo">
               <img
-                src="images/logo_dark.png"
+                src="images/logo_dark.webp"
                 alt="Coastal Property Management Logo"
-                width="200"
-                height="200"
+                width="300"
               />
             </a>
           </header>
@@ -123,7 +122,7 @@
               <article class="image-placeholder-container">
                 <div class="image image-placeholder">
                   <img
-                    src="images/placeholders/give-5242150_640.jpg"
+                    src="images/placeholders/give-5242150_640.webp"
                     alt="Handing over keys"
                   />
                   <span class="image-caption">Turn-key solutions</span>
@@ -162,7 +161,7 @@
               <article class="image-placeholder-container">
                 <div class="image image-placeholder">
                   <img
-                    src="images/placeholders/money-2696229_640.jpg"
+                    src="images/placeholders/money-2696229_640.webp"
                     alt="Money, time"
                   />
                   <span class="image-caption">Fair pricing and efficient service</span>
