--- a/about.html
+++ b/about.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>About Coastal Property Management</title>
     <meta charset="utf-8" />
+    <title>
+      About Coastal Property Management - Property Management, Construction, and
+      Landscaping in Saint John
+    </title>
+    <meta
+      name="description"
+      content="Learn more about Coastal Property Management, a leading provider of property management, construction, and landscaping services in Saint John, New Brunswick. Discover our story and what sets us apart."
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap"
       rel="stylesheet"
@@ -44,8 +53,14 @@
     />
     <link rel="manifest" href="/images/site.webmanifest" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:title" content="About Coastal Property Management" />
-    <meta property="og:description" content="Learn about who we are." />
+    <meta
+      property="og:title"
+      content="About Coastal Property Management | Your Property Partner in Saint John"
+    />
+    <meta
+      property="og:description"
+      content="Discover Coastal Property Management, your expert in managing properties, construction projects, and creating stunning landscapes in Saint John, New Brunswick."
+    />
     <meta property="og:url" content="https://coastalpm.ca/about.html" />
     <meta
       property="og:image"
@@ -60,9 +75,7 @@
     <meta property="og:type" content="website" />
   </head>
   <body class="is-preload">
-    <!-- Wrapper -->
     <div id="wrapper">
-      <!-- Main -->
       <div id="main">
         <div class="inner">
           <ul class="icons social-icons">
@@ -80,33 +93,30 @@
               >
             </li>
           </ul>
-          <!-- Header -->
           <header id="header">
-            <a href="index.html" class="logo">
-              <img
-                src="images/logo_dark.png"
+            <a href="index.html" class="logo"
+              ><img
+                src="images/logo_dark.webp"
                 alt="Coastal Property Management Logo"
-                width="200"
-                height="200"
-              />
-            </a>
+                width="300"
+            /></a>
           </header>
-          <!-- Banner -->
           <section id="banner">
             <div class="content">
-              <h1>ABOUT US</h1>
+              <h1>About Us</h1>
               <p style="text-align: justify">
-                Welcome to Coastal Property Management, your trusted partner in
-                property management, construction, and landscaping services. We
-                proudly serve the vibrant community of Saint John, New
-                Brunswick. Whether you're looking to manage your property
-                efficiently, undertake a new construction project, or maintain a
-                beautiful landscape, we are here to help you every step of the
-                way with our dedicated and professional services.
+                Welcome to <em>Coastal Property Management</em>, your trusted
+                partner in property management, construction, and landscaping
+                services. We proudly serve the vibrant community of
+                <strong>Saint John, New Brunswick</strong>. Whether you're
+                looking to <strong>manage</strong> your property efficiently,
+                undertake a new <strong>construction</strong> project, or
+                maintain a beautiful <strong>landscape</strong>, we are here to
+                help you every step of the way with our dedicated and
+                professional services.
               </p>
             </div>
           </section>
-          <!-- Image Placeholder -->
           <section class="image-placeholder-container">
             <div class="image image-placeholder">
               <img
@@ -116,7 +126,6 @@
               <span class="image-caption">City of Saint John</span>
             </div>
           </section>
-          <!-- Content Section -->
           <section>
             <header class="major">
               <h2><i class="fa fa-book" aria-hidden="true"></i> Our Story</h2>
@@ -124,25 +133,25 @@
             <p>
               Our property management firm was established by two visionary
               entrepreneurs who were driven by a common goal to deliver
-              unparalleled service excellence to our clientele. Our seasoned
-              team comprises professionals with extensive experience in the
-              construction and development sector, enabling us to offer
-              comprehensive turnkey solutions for managing properties
+              <strong>unparalleled service excellence</strong> to our clientele.
+              Our seasoned team comprises professionals with extensive
+              experience in the construction and development sector, enabling us
+              to offer comprehensive turnkey solutions for managing properties
               efficiently.
             </p>
             <p>
               Our staff's background covers diverse aspects of property
               management such as handling tenants, routine maintenance,
               emergency repairs, leasing, and rent collection - ensuring that
-              every facet is expertly managed with the utmost care. This level
-              of experience positions us uniquely to cater not only to
-              residential properties but also commercial real estate ventures,
-              including multi-unit buildings or single-family homes requiring
-              comprehensive management services.
+              every facet is expertly managed with the <em>utmost care</em>.
+              This level of experience positions us uniquely to cater not only
+              to residential properties but also commercial real estate
+              ventures, including multi-unit buildings or single-family homes
+              requiring comprehensive management services.
             </p>
             <p>
-              At our core, we are landscaping enthusiasts who recognize that
-              maintaining attractive exterior spaces is integral to the
+              At our core, we are <em>landscaping enthusiasts</em> who recognize
+              that maintaining attractive exterior spaces is integral to the
               property's appeal and value. Our team boasts expertise in
               developing and executing innovative outdoor designs for properties
               under our care while ensaturating a meticulous maintenance regime
@@ -160,7 +169,6 @@
               every nuance of the industry.
             </p>
           </section>
-          <!-- Testimonials Section -->
           <section>
             <header class="major">
               <h2>
@@ -173,7 +181,7 @@
                 <div class="image-placeholder-container">
                   <div class="image image-placeholder">
                     <img
-                      src="images/placeholders/thumbs-up-2056022_640.jpg"
+                      src="images/placeholders/thumbs-up-2056022_640.webp"
                       alt="Thumbs Up"
                     />
                   </div>
@@ -196,7 +204,7 @@
                 <div class="image-placeholder-container">
                   <div class="image image-placeholder">
                     <img
-                      src="images/placeholders/woman-2385785_640.jpg"
+                      src="images/placeholders/woman-2385785_640.webp"
                       alt="Woman Thumbs Up"
                     />
                   </div>
@@ -206,10 +214,8 @@
           </section>
         </div>
       </div>
-      <!-- Sidebar -->
       <div id="sidebar">
         <div class="inner">
-          <!-- Menu -->
           <nav id="menu">
             <header class="major">
               <h2>Menu</h2>
@@ -217,53 +223,49 @@
             <ul>
               <li>
                 <a href="index.html"
-                  >Homepage <i class="fa fa-home" aria-hidden="true"></i></a
-                >
+                  >Homepage <i class="fa fa-home" aria-hidden="true"></i
+                ></a>
               </li>
               <li>
                 <a href="about.html"
-                  ></i>About
-                  Us <i class="fa fa-info-circle" aria-hidden="true"></i></a
-                >
+                  >About Us <i class="fa fa-info-circle" aria-hidden="true"></i
+                ></a>
               </li>
               <li>
                 <a href="services.html"
-                  >Services <i class="fa fa-cogs" aria-hidden="true"></i></a
-                >
+                  >Services <i class="fa fa-cogs" aria-hidden="true"></i
+                ></a>
               </li>
               <li>
                 <a
                   href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
-                >
-                  Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i>
-                </a>
+                  >Rental Application
+                  <i class="fa fa-file-alt" aria-hidden="true"></i
+                ></a>
               </li>
               <li>
                 <a href="contactus.html"
-                  >Contact
-                  Us <i class="fa fa-envelope" aria-hidden="true"></i></a
-                >
+                  >Contact Us <i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
               </li>
             </ul>
             <div class="sidebar-buttons">
-              <a href="Buildium Client">
-                <button class="sidebar-button">
+              <a href="Buildium Client"
+                ><button class="sidebar-button">
                   <i class="fa fa-user" aria-hidden="true"></i> Client Login
-                </button>
-              </a>
+                </button></a
+              >
               <a
                 href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
                 target="_blank"
-              >
-                <button class="sidebar-button">
+                ><button class="sidebar-button">
                   <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
                   Login
-                </button>
-              </a>
+                </button></a
+              >
             </div>
           </nav>
-          <!-- Section -->
           <section>
             <header class="major">
               <h2>
@@ -307,9 +309,9 @@
         new Date().getFullYear();
     </script>
     <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        document.body.classList.add('fade-in');
+      document.addEventListener("DOMContentLoaded", function () {
+        document.body.classList.add("fade-in");
       });
-    </script>    
+    </script>
   </body>
 </html>
