--- a/contactus.html
+++ b/contactus.html
@@ -1,254 +1,127 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Coastal Property Management</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <!--<link rel="stylesheet" href="assets/css/styles.css" />-->
-    <!-- Standard favicon -->
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
-    <!-- Apple Touch Icon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/images/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/images/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/images/favicon-16x16.png"
-    />
-    <!-- Android Chrome Icons -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/images/android-chrome-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="/images/android-chrome-512x512.png"
-    />
-    <!-- Manifest File -->
-    <link rel="manifest" href="/images/site.webmanifest" />
-  </head>
-  <body class="is-preload">
-    <!-- Wrapper -->
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Contact Us - Coastal Property Management | Saint John, New Brunswick</title>
+    <meta name="description" content="Contact Coastal Property Management for property management, construction, and landscaping services in Saint John, New Brunswick. We are here to assist you with your property needs.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/images/android-chrome-512x512.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+    <meta property="og:title" content="Contact Coastal Property Management | Property Services">
+    <meta property="og:description" content="Get in touch with Coastal Property Management for dedicated property management, construction, and landscaping services in Saint John, New Brunswick.">
+    <meta property="og:url" content="https://coastalpm.ca/contactus.html">
+    <meta property="og:image" content="https://coastalpm.ca/images/contact-banner.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+</head>
+<body class="is-preload">
     <div id="wrapper">
-      <!-- Main -->
-      <div id="main">
-        <div class="inner">
-          <ul class="icons social-icons">
-            <li>
-              <a
-                href="https://www.facebook.com/coastalpmca/"
-                target="_blank"
-                class="icon brands fa-facebook-f"
-                ><span class="label">Facebook</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-instagram"
-                ><span class="label">Instagram</span></a
-              >
-            </li>
-          </ul>
-          <!-- Header -->
-          <header id="header">
-            <a href="index.html" class="logo">
-              <img
-                src="images/logo_dark.png"
-                alt="Coastal Property Management Logo"
-                width="200"
-                height="200"
-              />
-            </a>
-          </header>
-
-          <!-- Banner -->
-           <section>
-          <div class="content">
-            <h2>We're Here to Help!</h2>
-            <p>
-              Please fill out the form below with your contact information and a
-              brief message detailing your inquiry. Our team will review your
-              submission and get back to you as promptly as possible.
-            </p>
-          </div>
-          <div class="contact-section">
-            <div class="contact-form">
-              <form
-                action="https://forms.office.com/Pages/ResponsePage.aspx?id=jDc2nRajekGiv63Gb6gIokA-KwhxZ2BItZikivGlYWNUQkNDNlNGMkg0Wjk5RDdRMUo2RlgyWFFCWC4u"
-                method="POST"
-              >
-                <div class="form-wrapper">
-                  <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required />
-                  </div>
-                  <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required />
-                  </div>
-                  <div class="form-group">
-                    <label for="phone">Phone (optional):</label>
-                    <input type="tel" id="phone" name="phone" />
-                  </div>
-                  <div class="form-group full-width">
-                    <label for="message">Message:</label>
-                    <textarea
-                      id="message"
-                      name="message"
-                      rows="4"
-                      required
-                    ></textarea>
-                  </div>
-                  <div class="form-group full-width">
-                    <input type="submit" value="Send Message" />
-                  </div>
+        <div id="main">
+            <div class="inner">
+                <ul class="icons social-icons">
+                    <li><a href="https://www.facebook.com/coastalpmca/" target="_blank" class="icon brands fa-facebook-f" aria-label="Coastal Property on Facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon brands fa-instagram" aria-label="Coastal Property on Instagram"><span class="label">Instagram</span></a></li>
+                </ul>
+                <header id="header">
+                    <a href="index.html" class="logo"><img src="images/logo_dark.webp" alt="Coastal Property Management Logo" width="300"></a>
+                </header>
+                <section>
+                    <div class="content">
+                        <h1>Contact Coastal Property Management</h1>
+                        <p>Please fill out the form below with your contact information and a brief message detailing your inquiry. Our team will review your submission and get back to you as promptly as possible.</p>
+                    </div>
+                    <div class="contact-section">
+                        <div class="contact-form">
+                            <form action="https://forms.office.com/Pages/ResponsePage.aspx?id=jDc2nRajekGiv63Gb6gIokA-KwhxZ2BItZikivGlYWNUQkNDNlNGMkg0Wjk5RDdRMUo2RlgyWFFCWC4u" method="POST">
+                                <div class="form-wrapper">
+                                    <div class="form-group">
+                                        <label for="name">Name:</label>
+                                        <input type="text" id="name" name="name" required />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">Email:</label>
+                                        <input type="email" id="email" name="email" required />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="phone">Phone (optional):</label>
+                                        <input type="tel" id="phone" name="phone" />
+                                    </div>
+                                    <div class="form-group full-width">
+                                        <label for="message">Message:</label>
+                                        <textarea id="message" name="message" rows="4" required></textarea>
+                                    </div>
+                                    <div class="form-group full-width">
+                                        <input type="submit" value="Send Message" />
+                                    </div>
+                                </div>
+                            </form>
+                            <p>Thank you for choosing Coastal Property Management. We look forward to serving you!</p>
+                        </div>
+                        <div class="image-placeholder-container">
+                            <div class="image image-placeholder">
+                                <img src="images/placeholders/reflection-1519135_640.webp" alt="Geodesic reflection" />
+                                <span class="image-caption">We handle projects of all scales!</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </form>
-              <p>
-                Thank you for choosing Coastal Property Management. We look
-                forward to serving you!
-              </p>
-            </div>
-            <div class="image-placeholder-container">
-              <div class="image image-placeholder">
-                <img
-                  src="images/placeholders/reflection-1519135_640.jpg"
-                  alt="Geodesic reflection"
-                />
-                <span class="image-caption">We handle projects of all scales!</span>
-              </div>
-            </div>
-          </div>
+            </section>
         </div>
-        </section>
-      </div>
-     <!-- Sidebar -->
-     <div id="sidebar">
-      <div class="inner">
-        <!-- Menu -->
-        <nav id="menu">
-          <header class="major">
-            <h2>Menu</h2>
-          </header>
-          <ul>
-            <li>
-              <a href="index.html"
-                >Homepage <i class="fa fa-home" aria-hidden="true"></i></a
-              >
-            </li>
-            <li>
-              <a href="about.html"
-                ></i>About
-                Us <i class="fa fa-info-circle" aria-hidden="true"></i></a
-              >
-            </li>
-            <li>
-              <a href="services.html"
-                >Services <i class="fa fa-cogs" aria-hidden="true"></i></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
-                target="_blank"
-              >
-                Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-              <a href="contactus.html"
-                >Contact
-                Us <i class="fa fa-envelope" aria-hidden="true"></i></a
-              >
-            </li>
-          </ul>
-          <div class="sidebar-buttons">
-            <a href="Buildium Client">
-              <button class="sidebar-button">
-                <i class="fa fa-user" aria-hidden="true"></i> Client Login
-              </button>
-            </a>
-            <a
-              href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
-              target="_blank"
-            >
-              <button class="sidebar-button">
-                <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
-                Login
-              </button>
-            </a>
-          </div>
-        </nav>
-        <!-- Section -->
-        <section>
-          <header class="major">
-            <h2>
-              <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
-            </h2>
-          </header>
-          <p>
-            Hey there! Whether it's managing properties, tackling construction
-            projects, or beautifying landscapes, we've got you covered. Let's
-            bring your vision to life – reach out and let's make it happen!
-          </p>
-          <ul class="contact">
-            <li class="icon solid fa-envelope">
-              <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
-            </li>
-            <li class="icon solid fa-phone">
-              <a href="tel:5067090420">506-709-0420</a>
-            </li>
-            <li class="icon solid fa-home">Grand Bay-Westfield</li>
-            <li class="icon solid fa-wrench">
-              Also serving Saint John, Rothesay, Quispamsis
-            </li>
-          </ul>
-        </section>
-        <footer id="footer">
-          <p class="copyright">
-            &copy; <span id="currentYear"></span> Coastal Property Management.
-            All rights reserved.
-          </p>
-        </footer>
-      </div>
+        <div id="sidebar">
+            <div class="inner">
+                <nav id="menu">
+                    <header class="major">
+                        <h2>Menu</h2>
+                    </header>
+                    <ul>
+                        <li><a href="index.html">Homepage <i class="fa fa-home" aria-hidden="true"></i></a></li>
+                        <li><a href="about.html">About Us <i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
+                        <li><a href="services.html">Services <i class="fa fa-cogs" aria-hidden="true"></i></a></li>
+                        <li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new" target="_blank">Rental Application <i class="fa fa-file-alt" aria-hidden="true"></i></a></li>
+                        <li><a href="contactus.html">Contact Us <i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                    </ul>
+                    <div class="sidebar-buttons">
+                        <a href="Buildium Client"><button class="sidebar-button"><i class="fa fa-user" aria-hidden="true"></i> Client Login</button></a>
+                        <a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal" target="_blank"><button class="sidebar-button"><i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant Login</button></a>
+                    </div>
+                </nav>
+                <section>
+                    <header class="major">
+                        <h2><i class="fa fa-phone" aria-hidden="true"></i> Get in touch</h2>
+                    </header>
+                    <p>Hey there! Whether it's managing properties, tackling construction projects, or beautifying landscapes, we've got you covered. Let's bring your vision to life – reach out and let's make it happen!</p>
+                    <ul class="contact">
+                        <li class="icon solid fa-envelope"><a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a></li>
+                        <li class="icon solid fa-phone"><a href="tel:5067090420">506-709-0420</a></li>
+                        <li class="icon solid fa-home">Grand Bay-Westfield</li>
+                        <li class="icon solid fa-wrench">Also serving Saint John, Rothesay, Quispamsis</li>
+                    </ul>
+                </section>
+                <footer id="footer">
+                    <p class="copyright">&copy; <span id="currentYear"></span> Coastal Property Management. All rights reserved.</p>
+                </footer>
+            </div>
+        </div>
     </div>
-  </div>
-    <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>document.getElementById("currentYear").innerHTML = new Date().getFullYear();</script>
     <script>
-      document.getElementById("currentYear").innerHTML =
-        new Date().getFullYear();
+        document.addEventListener("DOMContentLoaded", function() {
+            document.body.classList.add('fade-in');
+        });
     </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        document.body.classList.add('fade-in');
-      });
-    </script>
-    
-  </body>
+</body>
 </html>
